# Dokugen

./: .dockerignore  .dokugen-cache.json  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTION.md  Dockerfile  LICENSE  PreviousRead.md  README.md  design_system.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml
api/: active-users.ts  generate-readme.js  generate-readme.ts
apps/cli/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
apps/cli/clients/python/: PUBLISHING.md  README.md  dokugen.py  project_detect.py  pyproject.toml  utils.py
apps/cli/clients/python/src/dokugen/: cli.py  project_detect.py  utils.py
apps/cli/clients/python/src/dokugen/commands/: __init__.py  aic.py  generate.py  license.py  revert.py  update.py
apps/docs/: next-sitemap.config.js  next.config.ts  (+4 more)
config/: default-dokugenrc.json
dashboard/: README.md  eslint.config.mjs  next-sitemap.config.js  next-sitemap.config.ts  next-sitrmap.config  next-sitrmap.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
documentation/: .gitattributes  eslint.config.js  index.html  package-lock.json  package.json
lib/: supabase.mjs  supabase.ts
scripts/: postinstall.mjs  postinstall.ts
server/: Dockerfile  go.mod  go.sum  main.go  package-lock.json  package.json  server.ts  supabase.ts  tsconfig.json
src/: dokugen.js  dokugen.ts  liveUpdater.ts
video/: package-lock.json  package.json
vscode-extension/: package-lock.json  package.json
(+93 files in other folders)
