[project]
name = "dokugen"
version = "3.11.0"
description = "Automatically generate high-quality README for your application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pathspec>=0.12.1",
    "questionary>=2.0.1",
]
authors = [
  {name = "Samuel Tuoyo", email = "samueltuoyos@gmail.com"}
]
keywords = ["readme", "generator", "ai", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/samueltuoyo15/Dokugen"
Repository = "https://github.com/samueltuoyo15/Dokugen"
Issues = "https://github.com/samueltuoyo15/Dokugen/issues"

[project.scripts]
dokugen = "dokugen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
